feat: 完成 Provider 配置本地校验
